realizando modificaciones a mis archivos

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <title>QUIZ APP</title>
 </head>
 <body>
-    <header>
-        <img class="fade-out img-responsive" src="https://ihatetomatoes.net/react-tutorials/abc-quiz/images/plane.svg" width="250">
-    </header>
+    <div class="row">
+            <div clas="col-lg-4 col-lg-offset-4 quizTitle">
+        <img class="fade-out img-responsive" src="assets/img/quiz.gif" width="300">
+            </div>
+    </div>
   
-         <div class="quiz-box-container">
-            <div class="wrapper">
-                <div class="quiz-box">
-                    <div class="name-box"> <span>Your Name?</span>
+         <div class="quiz-box-container row">
+            <div class="wrappe col-lg-4 col-lg-offset-4">
+                <div class="quiz-box col-lg-4 col-lg-offset-4 caja">
+                    <div class="name-box "> <span>Your Name?</span>
                         <br>
                         <form id="name-form">
                             <input type="text" id="name-input-box" />
