Haciedndo cambios para que mi proyecto sea responsive

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <title>QUIZ APP</title>
 </head>
 <body>
-            <header><img class="fade-out" src="assets/img/quiz.gif"></header>
+            <div class="col-lg-4 col-lg-offset-4 text-center"><img class="img-responsive"  src="assets/img/quiz.gif"></div>
     <div id="wrap" class="row">
-      <div class=' col-xs-6 quiz' id="quiz-area">
-        <div class='stem col-xs-12' id="stem"></div>
-        <div class='stem' id="stem"></div>
+      <div class=' col-xs-12 col-xs-offset-12 text-center quiz ' id="quiz-area">
+        <div class='stem col-xs-12 col-xs-offset-12 text-center' id="stem"></div>
         <div class='choice-flexbox col-xs-12'>
           <div class="options col-xs-4" id="option0"></div>
           <div class="options col-xs-4" id="option1"></div>
@@ -23,7 +22,7 @@
 
         </div>
         <!--progress bar -->
-        <div class="progress">
+        <div class="progress col-xs-12 col-xs-offset-12">
           <div><progress id="progress" max="100" value="0"></progress></div>
           <div>Your progress</div>
         </div>
