mejorando mi proyecto

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <!--progress bar -->
         <div class="progress col-xs-12 col-xs-offset-12">
-          <div><progress id="progress" max="100" value="0"></progress></div>
-          <div>Your progress</div>
+          <div><div>Your progress</div> <progress id="progress" max="100" value="0"></progress></div>
+          
         </div>
       </div>
     </div>
