--- a/index.html
+++ b/index.html
@@ -21,48 +21,26 @@
         <div class="options col-xs-4" id="option1"></div>
         <div class="options col-xs-4" id="option2"></div>
       </div>
-
-
-    </div>
-  </div>
-  <div class="row">
-    <!--progress bar -->
-    <div class="progress col-xs-12">
-      <div>
-        <div>Your progress</div>
-        <progress id="progress" max="100" value="0"></progress>
-      </div>
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-          <span class="sr-only">60% Complete</span>
-        </div>
-      </div>
+      <div class="row">
+        <!--progress bar -->
+               
+            <progress id="progress" max="100" value="0"></progress>
+         
+         </div>
 
     </div>
   </div>
-  <!--
-    <div class="row">
-        <div class="col-xs-12">
-            <div id="progreso">
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                      <span class="sr-only">70% Complete</span>
-                    </div>
-                  </div>
-            </div>
-        </div>
-    </div>-->
-  </div>
+  
+
 
   <section id="lab_social_icon_footer">
     <!-- Include Font Awesome Stylesheet in Header -->
 
     <div class="container">
       <div class="text-center center-block">
-        <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
-        <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
-        <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+        <a ><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+        <a ><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+        <a ><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
       </div>
     </div>
   </section>
